# live_transcription

./: .gitignore  .gitmodules  .nextcloudignore  .pre-commit-config.yaml  Dockerfile  Makefile  REUSE.toml  changelog.md  changelog.yaml  example.env  healthcheck.sh  logger_config.yaml  main.py  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  start.sh  supervisord.conf  test.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.md
.github/workflows/: docker-build-publish.yml  static-analysis.yml
appinfo/: info.xml
ex_app/lib/: __init__.py  __main__.py  atranslator.py  audio_stream.py  capabilities.py  caps.py  constants.py  livetypes.py  logger.py  main.py  meta_translator.py  models.py  ocp_translator.py  service.py  spreed_client.py  transcriber.py  utils.py  vosk_server.py
tests/: .test_transcriber.py  conftest.py  test_hpb_vars.py  test_ssl_context.py  test_transcriber.py
