# SPDX-FileCopyrightText: 2025 Nextcloud GmbH and Nextcloud contributors
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "ex_app"
version = "1.2.0"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["A", "B", "C", "D", "E", "F", "G", "I", "S", "SIM", "PIE", "Q", "RET", "RUF", "UP" , "W"]
extend-ignore = ["D100", "D101", "D102", "D103", "D105", "D107", "D203", "D213", "D401", "E402", "I001", "RUF100", "D400", "D415", "W191"]

[tool.ruff.lint.mccabe]
max-complexity = 12

# allow assert in tests
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.isort]
profile = "black"
indent = "tab"
line_length = 120

[tool.pylint]
master.py-version = "3.11"
master.extension-pkg-allow-list = ["pydantic"]
design.max-attributes = 8
design.max-locals = 16
design.max-branches = 16
design.max-returns = 8
design.max-args = 7
basic.good-names = [
    "a", "b", "c", "d", "e", "f", "i", "j", "k", "r", "v",
    "ex", "_", "fp", "im", "nc", "ui",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
similarities.min-similarity-lines = 6
messages_control.disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "too-few-public-methods",
    "too-many-public-methods",
    "global-statement",
    "broad-exception-caught",
]

[[tool.mypy.overrides]]
module = ["nc_py_api.*", "print_color.*", "vosk.*"]
follow_untyped_imports = true
